java/java-tests/testData/psi/optimizeImports/OptimizeImportNotOnTheFlyInvalidImport.java
<warning descr="Unused import statement">import <error descr="Cannot resolve symbol 'foo'">foo</error>.bar.Baz<caret>;</warning>

class Foo {
}